fix: Broken layout on highlighted gift button

--- a/wp-content/plugins/jourj-gifts/assets/css/front-end.css
+++ b/wp-content/plugins/jourj-gifts/assets/css/front-end.css
@@ -377,6 +377,7 @@
 }
 .jo-block-gift-highlight__content .wp-block-button__link {
   width: fit-content;
+  height: fit-content;
   margin-top: 1.5rem;
   cursor: pointer;
 }
