--- a/wp-content/plugins/jourj-gifts/assets/css/scss/front-end/templates/_gift-highlight.scss
+++ b/wp-content/plugins/jourj-gifts/assets/css/scss/front-end/templates/_gift-highlight.scss
@@ -27,6 +27,7 @@
 
 		.wp-block-button__link {
 			width: fit-content;
+			height: fit-content;
 			margin-top: 1.5rem;
 			cursor: pointer;
 		}
